--- a/index.html
+++ b/index.html
@@ -3,50 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZCO CENTRAL | المقر المركزي</title>
+    <title>ZCO CENTRAL OS</title>
     <style>
-        :root { --main-color: #00f2ff; --bg-color: #050505; }
-        body { background-color: var(--bg-color); color: var(--main-color); font-family: 'Courier New', monospace; text-align: center; margin: 0; }
-        .login-box { border: 1px solid var(--main-color); padding: 30px; margin: 100px auto; width: 80%; max-width: 400px; background: #000; }
-        input { background: transparent; border: 1px solid var(--main-color); color: #fff; padding: 10px; text-align: center; margin: 20px 0; width: 80%; }
-        button { background: var(--main-color); color: #000; border: none; padding: 10px 20px; cursor: pointer; font-weight: bold; }
-        #dashboard { display: none; padding: 20px; }
-        .id-card-img { width: 100%; max-width: 350px; border: 2px solid var(--main-color); margin: 20px 0; }
-        .logo-img { width: 100px; margin-bottom: 10px; }
-        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-        th, td { border: 1px solid var(--main-color); padding: 10px; font-size: 0.8rem; }
+        :root { --main: #00f2ff; --bg: #050505; }
+        body { background-color: var(--bg); color: var(--main); font-family: 'Courier New', monospace; margin: 0; text-align: center; }
+        .nav-menu { display: flex; justify-content: center; gap: 10px; margin: 20px 0; flex-wrap: wrap; }
+        .nav-btn { background: transparent; border: 1px solid var(--main); color: var(--main); padding: 10px; cursor: pointer; flex: 1; max-width: 120px; font-size: 0.8rem; }
+        .nav-btn.active { background: var(--main); color: #000; }
+        .content-section { display: none; padding: 20px; animation: fadeIn 0.5s; }
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+        .id-card { width: 100%; max-width: 350px; border: 2px solid var(--main); margin-bottom: 20px; }
+        table { width: 100%; border-collapse: collapse; margin-top: 10px; font-size: 0.8rem; }
+        th, td { border: 1px solid var(--main); padding: 8px; }
+        th { background: rgba(0, 242, 255, 0.1); }
+        .case-file { border: 1px solid var(--main); padding: 15px; margin-bottom: 10px; text-align: right; background: rgba(0, 242, 255, 0.05); }
     </style>
 </head>
 <body>
 
-    <div id="login" class="login-box">
-        <img src="Logo- png.PNG" alt="ZCO LOGO" class="logo-img">
-        <h1>ZÊTA CYBER OPERATION</h1>
-        <p>IDENTIFICATION REQUIRED</p>
-        <input type="password" id="pass" placeholder="ENTER RANK CODE">
-        <br>
-        <button onclick="check()">ACCESS</button>
+    <div id="login-screen" style="padding-top: 20vh;">
+        <img src="Logo- png.PNG" width="80">
+        <h2>نظام تشغيل ZCO</h2>
+        <input type="password" id="pass" placeholder="كود القيادة" style="background:transparent; border:1px solid var(--main); color:#fff; padding:10px; text-align:center;"><br><br>
+        <button onclick="login()" style="background:var(--main); border:none; padding:10px 20px; font-weight:bold;">دخول</button>
     </div>
 
-    <div id="dashboard">
-        <h2>WELCOME, THE ARCHITECT (Z-01)</h2>
-        <hr>
-        <img src="Image png.jpg" alt="Z-01 ID CARD" class="id-card-img">
-        <h3>OPERATIONAL HIERARCHY</h3>
-        <table>
-            <tr><th>RANK</th><th>NAME</th><th>CODE</th><th>DUTY</th></tr>
-            <tr><td>THE ARCHITECT</td><td>ZOUHIR MARDI</td><td>Z-01</td><td>COMMAND</td></tr>
-            <tr><td>FIELD LEADER</td><td>PENDING</td><td>Z-ALPHA</td><td>OFFENSIVE</td></tr>
-        </table>
+    <div id="main-system" style="display:none;">
+        <div class="nav-menu">
+            <button class="nav-btn active" onclick="showTab('id-tab', this)">الهوية</button>
+            <button class="nav-btn" onclick="showTab('ranks-tab', this)">الرتب</button>
+            <button class="nav-btn" onclick="showTab('cases-tab', this)">القضايا</button>
+        </div>
+
+        <div id="id-tab" class="content-section" style="display:block;">
+            <h3>البطاقة التعريفية للقائد</h3>
+            <img src="Image png.jpg" class="id-card">
+            <p>الاسم: ZOUHIR MARDI | الكود: Z-01</p>
+        </div>
+
+        <div id="ranks-tab" class="content-section">
+            <h3>هيكل الرتب والوحدات</h3>
+            <table>
+                <tr><th>الرتبة</th><th>الرمز</th><th>الواجب</th></tr>
+                <tr><td>القائد الأعلى</td><td>Z-01</td><td>القيادة والتحكم</td></tr>
+                <tr><td>النائب</td><td>Z-02</td><td>إدارة العمليات</td></tr>
+            </table>
+            <h3>توزيع الفرق</h3>
+            <table>
+                <tr><th>الفريق</th><th>الوحدة</th><th>الحالة</th></tr>
+                <tr><td>زيتا ألفا</td><td>الشرطة والنظام</td><td>نشط</td></tr>
+                <tr><td>زيتا دلتا</td><td>الاستخبارات</td><td>نشط</td></tr>
+            </table>
+        </div>
+
+        <div id="cases-tab" class="content-section">
+            <h3>ملفات القضايا النشطة</h3>
+            <div class="case-file">
+                <strong>القضية #001:</strong> تأمين الاتصالات المشفرة.<br>
+                <small>الحالة: قيد التنفيذ</small>
+            </div>
+            <div class="case-file">
+                <strong>القضية #002:</strong> استكمال هيكل النواب.<br>
+                <small>الحالة: بحث عن كفاءات</small>
+            </div>
+        </div>
     </div>
 
     <script>
-        function check() {
-            var p = document.getElementById("pass").value;
-            if(p === "ARCHITECT-01-Z") {
-                document.getElementById("login").style.display = "none";
-                document.getElementById("dashboard").style.display = "block";
-            } else { alert("ACCESS DENIED"); }
+        function login() {
+            if(document.getElementById('pass').value === 'ARCHITECT-01-Z') {
+                document.getElementById('login-screen').style.display = 'none';
+                document.getElementById('main-system').style.display = 'block';
+            } else { alert('خطأ في التصريح!'); }
+        }
+        function showTab(tabId, btn) {
+            let sections = document.getElementsByClassName('content-section');
+            for(let s of sections) s.style.display = 'none';
+            document.getElementById(tabId).style.display = 'block';
+            let btns = document.getElementsByClassName('nav-btn');
+            for(let b of btns) b.classList.remove('active');
+            btn.classList.add('active');
         }
     </script>
 </body>
